--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "form-data": "^2.3.3",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.2",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
