--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "captchapng": "0.0.1",
+    "connect-history-api-fallback": "^1.6.0",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
@@ -22,7 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.2",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "node-uuid": "^1.4.8",
