--- a/server/deploy.yaml
+++ b/server/deploy.yaml
@@ -8,14 +8,14 @@ apps:
 
 deploy:                     # 部署脚本
   production:               # 生产环境
-    #user: 'node'     # 服务器的用户名
+    user: 'node'     # 服务器的用户名
     host: '212.83.163.1'  # 服务器的ip地址
-    #port: 22                # ssh端口
+    port: 22                # ssh端口
     ref: origin/master      # 要拉取的git分支
     ssh_options: ["StrictHostKeyChecking=no", "PasswordAuthentication=no"] # SSH 公钥检查
     repo: https://github.com/xcqweb/xcentz.git # 远程仓库地址
     path: ./              # 拉取到服务器某个目录下
-    pre-deploy: git fetch --all # 部署前执行
+    pre-deploy: git pull origin master # 部署前执行
     post-deploy: npm install &&  pm2 reload deploy.yaml --env production # 部署后执行
     env:
       NODE_ENV: production
