--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
+    "echarts": "^4.2.1",
     "iview": "^3.4.0",
     "path-to-regexp": "^3.0.0",
     "screenfull": "^4.2.0",
