--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^3.1.9-1",
     "echarts": "^4.2.1",
     "iview": "^3.4.0",
+    "lodash": "^4.17.11",
     "path-to-regexp": "^3.0.0",
     "screenfull": "^4.2.0",
     "vue": "^2.6.10",
@@ -28,6 +29,7 @@
     "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-lodash": "^3.3.4",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.2",
     "eslint": "^5.16.0",
