--- a/server/nginx-1.16.0/conf/nginx.conf
+++ b/server/nginx-1.16.0/conf/nginx.conf
@@ -69,6 +69,10 @@ http {
     application/octet-stream
     text/x-cross-domain-policy;
 
+    upstream xcentz_http {
+        server 127.0.0.1:8081 weight=1;
+        server 127.0.0.1:8082 down;
+    }
 
     server {
         listen       80;
@@ -77,8 +81,9 @@ http {
 
         #access_log  logs/host.access.log  main;
 
+
         location / {
-            proxy_pass http://localhost:8081;
+            proxy_pass http://xcentz_http;
             root   html;
             index  index.html index.htm;
         }
