--- a/server/nginx-1.16.0/conf/nginx.conf
+++ b/server/nginx-1.16.0/conf/nginx.conf
@@ -71,7 +71,7 @@ http {
 
     upstream xcentz_http {
         server 127.0.0.1:8081 weight=1;
-        server 127.0.0.1:8082 down;
+        server 127.0.0.1:8082 weight=1;
     }
 
     server {
