--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "captchapng": "0.0.1",
     "connect-history-api-fallback": "^1.6.0",
     "connect-multiparty": "^2.2.0",
+    "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
@@ -18,12 +19,10 @@
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
     "express-session": "^1.16.1",
-    "express-token": "^0.1.0",
     "form-data": "^2.3.3",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
@@ -37,5 +36,5 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1"
-    }
+  }
 }
