--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "connect-multiparty": "^2.2.0",
     "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -29,6 +30,7 @@
     "node-uuid": "^1.4.8",
     "node-xlsx": "^0.14.1",
     "nodemailer": "^6.1.1",
+    "socket.io": "^2.2.0",
     "string-random": "^0.1.3",
     "svg-captcha": "^1.3.12"
   },
