--- a/server/nginx-1.16.0/conf/nginx.conf
+++ b/server/nginx-1.16.0/conf/nginx.conf
@@ -74,28 +74,28 @@ http {
         server 127.0.0.1:8082 weight=1;
     }
 
-    server {
-        listen       80;
-        server_name  localhost;
+    # server {
+        # listen       80;
+        # server_name  localhost;
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
 
-        location / {
-            proxy_pass http://xcentz_http;
-            root   html;
-            index  index.html index.htm;
-        }
+        # location / {
+        #     proxy_pass http://xcentz_http;
+        #     root   html;
+        #     index  index.html index.htm;
+        # }
 
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+        # error_page   500 502 503 504  /50x.html;
+        # location = /50x.html {
+        #     root   html;
+        # }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
@@ -119,7 +119,7 @@ http {
         #location ~ /\.ht {
         #    deny  all;
         #}
-    }
+    # }
 
 
     # another virtual host using mix of IP-, name-, and port-based configuration
@@ -138,23 +138,24 @@ http {
 
     # HTTPS server
     #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+    server {
+       listen       443 ssl http2;
+       server_name  localhost;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+       ssl_certificate      ../../keys/server.crt;
+       ssl_certificate_key  ../../keys/server.key;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+       ssl_session_cache    shared:SSL:1m;
+       ssl_session_timeout  5m;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+       ssl_ciphers  HIGH:!aNULL:!MD5;
+       ssl_prefer_server_ciphers  on;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+       location / {
+            proxy_pass https://xcentz_http;
+            root   html;
+            index  index.html index.htm;
+       }
+    }
 
 }
