--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "node-xlsx": "^0.14.1",
     "nodemailer": "^6.1.1",
     "socket.io": "^2.2.0",
+    "spdy": "^4.0.0",
     "string-random": "^0.1.3",
     "svg-captcha": "^1.3.12"
   },
