--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,13 @@
     "express-session": "^1.16.1",
     "form-data": "^2.3.3",
     "http-errors": "~1.6.2",
+    "ioredis": "^4.9.5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
+    "node-schedule": "^1.3.2",
     "node-uuid": "^1.4.8",
     "node-xlsx": "^0.14.1",
     "nodemailer": "^6.1.1",
