--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,8 @@
     "socket.io": "^2.2.0",
     "spdy": "^4.0.0",
     "string-random": "^0.1.3",
-    "svg-captcha": "^1.3.12"
+    "svg-captcha": "^1.3.12",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
