--- a/server/nginx-1.16.0/conf/nginx.conf
+++ b/server/nginx-1.16.0/conf/nginx.conf
@@ -156,6 +156,10 @@ http {
             root   html;
             index  index.html index.htm;
        }
+
+       location ~* \.(gif|jpg|jpeg|png)$ {
+            root ../upload;
+        }
     }
 
 }
