项目立项流程

--- a/server/nginx-1.16.0/conf/nginx.conf
+++ b/server/nginx-1.16.0/conf/nginx.conf
@@ -77,7 +77,7 @@ http {
     # server {
         # listen       80;
         # server_name  localhost;
-        #charset koi8-r;
+        # charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
@@ -86,6 +86,10 @@ http {
         #     proxy_pass http://xcentz_http;
         #     root   html;
         #     index  index.html index.htm;
+        # }
+
+        # location ~* \.(gif|jpg|jpeg|png)$ {
+        #     root ../upload;
         # }
 
         #error_page  404              /404.html;
