--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "babel-node app.js --presets es2015,stage-2"
   },
   "dependencies": {
+    "autocannon": "^4.0.0",
     "babel-core": "^6.26.3",
     "captchapng": "0.0.1",
     "connect-history-api-fallback": "^1.6.0",
