--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "cross-env USER_ENV=development vue-cli-service serve",
+    "build": "cross-env USER_ENV=production vue-cli-service build",
+    "test": "cross-env USER_ENV=test vue-cli-service build",
+    "build:report": "cross-env USER_ENV=test report=true vue-cli-service build",
     "lint": "vue-cli-service lint",
     "copy": "node copy"
   },
@@ -33,6 +35,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.2",
+    "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "install": "^0.12.2",
