--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-scroll": "^1.15.2",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "cropperjs": "^1.5.1",
     "crypto-js": "^3.1.9-1",
     "echarts": "^4.2.1",
     "iview": "^3.4.0",
