--- a/server/nginx/conf/nginx.conf
+++ b/server/nginx/conf/nginx.conf
@@ -69,6 +69,7 @@ http {
     application/octet-stream
     text/x-cross-domain-policy;
 
+    #负载均衡
     upstream xcentz_http {
         server 127.0.0.1:8081 weight=1;
         server 127.0.0.1:8082 weight=1;
@@ -154,15 +155,26 @@ http {
 
        ssl_ciphers  HIGH:!aNULL:!MD5;
        ssl_prefer_server_ciphers  on;
-
+       
+        location ~ .*\.(?:js|css)$
+        {
+            expires      7d;
+        }
        location / {
             proxy_pass https://xcentz_http;
             root   html;
             index  index.html index.htm;
+
+            #proxy_cache cache_one;
+            proxy_cache_key "$host$request_uri";
+            add_header Cache "$upstream_cache_status";
+            proxy_cache_valid  200 304 301 302 8h;
+            proxy_cache_valid 404 1m;
+            proxy_cache_valid  any 2d;
        }
 
        location ~* \.(gif|jpg|jpeg|png)$ {
-            root ../upload;
+            root ../upload; #图片资源从该目录读取
         }
     }
 
